--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -76,5 +76,11 @@
     "card7D": "Предоставляет общую информацию о компании, услугах или продуктах.",
     "card8D": "ERP-платформа — это комплексное программное обеспечение, объединяющее все процессы компании: финансы, производство, логистика, управление персоналом и др.",
     "card9D": "Мы помогаем развивать новые стартап-проекты. Если у вас есть идея, мы готовы помочь вам реализовать её от концепции до готового продукта."
+  },
+  "Service": {
+    "IntroT1": "К каждому виду услуги",
+    "IntroT2": "для каждого клиента",
+    "IntroT3": "в любом формате",
+    "IntroT4": "мы подходим индивидуально!"
   }
 }
