--- a/src/i18n/messages/uz.json
+++ b/src/i18n/messages/uz.json
@@ -77,6 +77,12 @@
     "card7D": "Kompaniyaning umumiy ma'lumotini taqdim etish, xizmatlar yoki mahsulotlar haqida ma'lumot berish.",
     "card8D": "ERP platformasi korxona yoki tashkilotning barcha jarayonlarini birlashtiruvchi kompleks dasturiy ta'minotdir. U tashkilotning moliyaviy, ishlab chiqarish, logistika, kadrlar boshqaruvi va boshqa bo‘limlarini avtomatlashtirish uchun",
     "card9D": "Biz yangi startap loyihalarni ham rivojlantirishda yordam beramiz. Agarda sizda yangi startap g’oya mavjud bo’lsa biz siz bilan uni rivojlantirish ustida ishlashga tayyormiz. G’oyadan boshlab ishlash uchun tayyor dasturgacha shakllantiramiz."
+  },
+  "Service": {
+    "IntroT1": "Har bir xizmat turini",
+    "IntroT2": "har bir mijoz uchun",
+    "IntroT3": "istalgan turdagi",
+    "IntroT4": "deb yondoshamiz !"
   }
 
 }
