--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -11,7 +11,8 @@
     "titleP": "Давайте обсудим, как реализовать ваш проект",
     "formFooterT": "Бесплатная консультация",
     "formTable": "О нашей команде",
-    "formFooterD": "Оставьте свои данные для первичной бесплатной консультации по вашему проекту."
+    "formFooterD": "Оставьте свои данные для первичной бесплатной консультации по вашему проекту.",
+    "FooterBTNR": "Перевозки"
   },
 
   "SelectSwitcher": {
@@ -82,5 +83,116 @@
     "IntroT2": "для каждого клиента",
     "IntroT3": "в любом формате",
     "IntroT4": "мы подходим индивидуально!"
+  },
+  "Servicecard": {
+    "cardTitle": "Лендинги",
+    "cardLTitle1": "Кратко и эффективно",
+    "cardLTitle2": "Быстрая загрузка",
+    "cardRTitle2": "Целевая направленность",
+    "cardLP1": "Представляет ключевую информацию, которая сразу привлекает внимание клиента и побуждает к действию.",
+    "cardLP2": "Количество страниц: 1 (каждая страница содержит минимум 5 блоков.)",
+    "cardLP3": "Веб-дизайн: 10–15 часов работы.",
+    "cardLBtn": "Заказать",
+    "cardPL1": "Подготовка технического задания: 1 день",
+    "cardPL2": "Загружается максимально быстро, чтобы не утомлять посетителя.",
+    "cardPR": "Создан с четкой целью — побудить пользователя к конкретному действию."
+  },
+
+  "Servicecard2": {
+    "2cardTitle": "Каталожные страницы",
+    "2cardLTitle1": "Описание товаров",
+    "2cardLTitle2": "Разнообразные фильтры",
+    "2cardRTitle2": "Навигация",
+    "2cardLP1": "Каждый товар представлен с подробным описанием, характеристиками, преимуществами и изображениями.",
+    "2cardLP2": "Предоставлены различные фильтры и параметры сортировки для облегчения поиска.",
+    "2cardLP3": "Разработана удобная навигационная система для легкого и интуитивно понятного перемещения по каталогу.",
+    "2cardLBtn": "Заказать",
+    "2cardPL1": "Подготовка технического задания: 1 день",
+    "2cardPL2": "Количество страниц: 1 (каждая страница состоит минимум из 5 блоков.)",
+    "2cardPR": "Веб-дизайн: 10–15 часов работы. Цена: $100"
+  },
+  "Servicecard3": {
+    "3cardTitle": "Страницы интернет-магазина",
+    "3cardLTitle1": "Онлайн продажи",
+    "3cardLTitle2": "Безопасная оплата",
+    "3cardRTitle2": "Доставка",
+    "3cardLP1": "Позволяет клиентам покупать товары напрямую через сайт.",
+    "3cardLP2": "Безопасная система оплаты обеспечивает защиту данных клиентов.",
+    "3cardLP3": "Можно интегрировать различные варианты доставки в зависимости от региона и предпочтений.",
+    "3cardLBtn": "Заказать",
+    "3cardPL1": "Подготовка технического задания: 3–4 дня.",
+    "3cardPL2": "Количество страниц: каждая страница состоит минимум из 5 блоков.",
+    "3cardPR": "Веб-дизайн: 7–10 дней работы. Цена: $200–300"
+  },
+  "Servicecard4": {
+    "4cardTitle": "Страницы блога",
+    "4cardLTitle1": "Статьи",
+    "4cardLTitle2": "Категории",
+    "4cardRTitle2": "Поиск",
+    "4cardLP1": "Информативный раздел блога, улучшающий SEO и вовлеченность пользователей.",
+    "4cardLP2": "Статьи могут быть разделены по категориям для удобной навигации.",
+    "4cardLP3": "Включает поиск и фильтрацию статей.",
+    "4cardLBtn": "Заказать",
+    "4cardPL1": "Подготовка технического задания: 1–2 дня.",
+    "4cardPL2": "Количество страниц: 1–2 (минимум 5 блоков).",
+    "4cardPR": "Веб-дизайн: 10–20 часов работы. Цена: $100–150"
+  },
+  "Servicecard5": {
+    "5cardTitle": "Админ панель",
+    "5cardLTitle1": "Управление",
+    "5cardLTitle2": "Роли пользователей",
+    "5cardRTitle2": "Безопасность",
+    "5cardLP1": "Инструменты для редактирования, добавления, удаления контента и управления заказами.",
+    "5cardLP2": "Доступ по ролям для админов, редакторов и клиентов.",
+    "5cardLP3": "Двухфакторная аутентификация и защищённый вход в панель.",
+    "5cardLBtn": "Заказать",
+    "5cardPL1": "Подготовка технического задания: 3–5 дней.",
+    "5cardPL2": "Страницы: Панель + Контент + Управление пользователями = 3–4 страницы.",
+    "5cardPR": "UI/UX дизайн админки: 3–5 дней. Цена: $200–300"
+  },
+  "Servicecard6": {
+    "6cardTitle": "Личный кабинет",
+    "6cardLTitle1": "Профиль",
+    "6cardLTitle2": "Настройки",
+    "6cardRTitle2": "Заказы",
+    "6cardLP1": "Пользователи могут просматривать и редактировать свою информацию и фото.",
+    "6cardLP2": "Доступны настройки уведомлений и конфиденциальности.",
+    "6cardLP3": "Пользователь может просматривать историю заказов и статусы.",
+    "6cardLBtn": "Заказать",
+    "6cardPL1": "Подготовка технического задания: 2–3 дня.",
+    "6cardPL2": "Страницы: Профиль + Настройки + Заказы = 3 страницы.",
+    "6cardPR": "UI/UX дизайн: 2–4 дня. Цена: $150–250"
+  },
+  "Servicecard7": {
+    "7cardTitle": "Страницы авторизации",
+    "7cardLTitle1": "Вход",
+    "7cardLTitle2": "Регистрация",
+    "7cardRTitle2": "Восстановление пароля",
+    "7cardLP1": "Безопасная система входа по email или номеру телефона.",
+    "7cardLP2": "Быстрая регистрация с валидациями.",
+    "7cardLP3": "Возможность сброса пароля по email или SMS.",
+    "7cardLBtn": "Заказать",
+    "7cardPL1": "Подготовка технического задания: 1–2 дня.",
+    "7cardPL2": "Страницы: Вход + Регистрация + Сброс пароля = 3 страницы.",
+    "7cardPR": "Веб-дизайн: 8–12 часов работы. Цена: $80–100"
+  },
+  "Servicecard8": {
+    "8cardTitle": "Лендинг страница",
+    "8cardLTitle1": "Продажи",
+    "8cardLTitle2": "SEO Оптимизация",
+    "8cardRTitle2": "Призыв к действию",
+    "8cardLP1": "Создана для демонстрации продукта/услуги с визуалами и текстами.",
+    "8cardLP2": "Оптимизирована под Google и другие поисковики.",
+    "8cardLP3": "Содержит чёткие кнопки призыва к действию.",
+    "8cardLBtn": "Заказать",
+    "8cardPL1": "Подготовка технического задания: 1–2 дня.",
+    "8cardPL2": "Количество блоков: 5–8 на одной странице.",
+    "8cardPR": "Дизайн: 1–2 дня. Цена: $100"
+  },
+  "PortfolioIntro": {
+    "IntroT1": "За время нашей практики",
+    "IntroT2": "мы реализовали проекты",
+    "IntroT3": "разных масштабов в сфере ИТ",
+    "IntroT4": "и успешно запустили их"
   }
 }
